[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vost"
version = "0.78.2"
description = "A versioned filesystem backed by bare Git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "dulwich>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mhalle/vost"
Documentation = "https://mhalle.github.io/vost/"
Repository = "https://github.com/mhalle/vost"
Issues = "https://github.com/mhalle/vost/issues"
Changelog = "https://github.com/mhalle/vost/blob/master/CHANGELOG.md"

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "watchfiles>=1.0.0",
]
fuse = [
    "mfusepy>=3.0",
]
fsspec = [
    "fsspec>=2023.1.0",
]
dev = [
    "vost[cli]",
    "pytest>=8.0",
]

[project.scripts]
vost = "vost.cli:main"

[project.entry-points."fsspec.specs"]
vost = "vost._fsspec:VostFileSystem"

[tool.hatch.build.targets.sdist]
exclude = ["rs/target", "ts/node_modules", "site", "tmp"]

[tool.hatch.build.targets.wheel]
packages = ["src/vost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
