[package]
name = "vost"
version = "0.9.7"
edition = "2021"
rust-version = "1.75"
description = "A versioned filesystem backed by a bare git repository"
license = "Apache-2.0"
repository = "https://github.com/mhalle/vost"
homepage = "https://github.com/mhalle/vost/tree/master/rs"
readme = "README.md"
keywords = ["git", "filesystem", "versioned", "storage"]
categories = ["filesystem", "database-implementations"]
exclude = [
    "tests/",
    "examples/",
]

[dependencies]
git2 = "0.19"
fs2 = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[[example]]
name = "rs_write"

[[example]]
name = "rs_read"
