[package]
name = "vost"
version = "0.10.0"
edition = "2021"
rust-version = "1.75"
description = "A versioned filesystem backed by a bare git repository"
license = "Apache-2.0"
repository = "https://github.com/mhalle/vost"
homepage = "https://github.com/mhalle/vost/tree/master/rs"
readme = "README.md"
keywords = ["git", "filesystem", "versioned", "storage"]
categories = ["filesystem", "database-implementations"]
exclude = [
    "tests/",
    "examples/",
]

[dependencies]
git2 = "0.19"
fs2 = "0.4"
filetime = "0.2"
thiserror = "2"
# CLI-only dependencies, feature-gated
clap = { version = "4", features = ["derive", "env"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
xz2 = { version = "0.1", optional = true }
bzip2 = { version = "0.5", optional = true }
tiny_http = { version = "0.12", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true, default-features = false }

[features]
default = []
cli = ["clap", "serde", "serde_json", "chrono", "zip", "tar", "flate2", "xz2", "bzip2", "tiny_http", "log", "env_logger"]

[[bin]]
name = "vost"
path = "src/bin/vost.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[[example]]
name = "rs_write"

[[example]]
name = "rs_read"
