[package]
name = "vost-server"
version = "0.2.2"
edition = "2021"
rust-version = "1.75"
description = "High-performance HTTP file server for vost repositories"
license = "Apache-2.0"
repository = "https://github.com/mhalle/vost"

[features]
default = []
vendored-openssl = ["vost/vendored-openssl"]

[dependencies]
vost = { path = "../rs" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
